--- a/game/game.css
+++ b/game/game.css
@@ -21,7 +21,7 @@
     transform-origin: 0 0;
 }
 
-.pinkie {
+#pinkie {
     position: absolute;
     width: 140px;
     height: 126px;
@@ -30,15 +30,15 @@
     background: url(gfx/pie-dash.gif);
 }
 
-.pinkie.jumping {
+#pinkie.jumping {
     background: url(gfx/pie-jump.gif) !important;
 }
 
-.pinkie.gameover {
+#pinkie.gameover {
     background: url(gfx/pie-oops.gif) !important;
 }
 
-.ground {
+#ground {
     position: absolute;
     width: 3840px;
     height: 256px;
@@ -48,7 +48,7 @@
     z-index: -1;
 }
 
-.hater {
+#hater {
     position: absolute;
     width: 150px;
     height: 113px;
@@ -56,7 +56,7 @@
     background: url(gfx/trollface.gif);
 }
 
-.coin {
+#coin {
     position: absolute;
     width: 128px;
     height: 128px;
