Further Pink updates.

--- a/game/rxtut/rx.css
+++ b/game/rxtut/rx.css
@@ -1,4 +1,4 @@
-@import "../../src/css/fonts/Helvetica/helvetica.css";
+@import "HelveticaNeue/font.css";
 
 *, *:before, *:after {
     -moz-box-sizing: border-box;
